--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,11 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/colorPrimaryDark"
     tools:context="com.epicodus.politracker.MainActivity">
 
     <TextView
+    android:textSize="20dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Learn More about PoliTracker"
@@ -17,10 +19,11 @@
     android:layout_centerHorizontal="true"
     android:id="@+id/textAbout"
         android:clickable="true"
-        android:contextClickable="true"/>
+        />
 
 
     <EditText
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText"
