start building out click listeners to take user to other views

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,10 +38,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/poll"
+        android:id="@+id/imageViewPoll"
         android:layout_below="@+id/editTextZIP"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/imageViewPoll"/>
+        android:layout_marginTop="42dp" />
 
     <Button
         android:layout_width="wrap_content"
