use intent.putExtra to pass along ZIP code input and finish click listeners

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
     android:text="Learn More about PoliTracker"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
+    android:textColor="@color/colorAccent"
     android:id="@+id/textAbout" />
 
 
