--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
     android:textColor="@color/colorAccent"
+    android:background="?attr/selectableItemBackground"
     android:id="@+id/textAbout" />
 
 
