--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -19,13 +19,39 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-
-    <ListView
+    <TextView
+        android:text="Representative Name: "
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/infoView"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/zipView" />
+        android:id="@+id/textlabelOne"
+        android:layout_below="@+id/zipView"
+        android:layout_alignLeft="@+id/infoView"
+        android:layout_alignStart="@+id/infoView"
+        android:layout_marginTop="36dp" />
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/infoView"
+            android:layout_weight="0.5"
+            android:layout_below="@+id/textlabelOne"
+            android:layout_marginLeft="170dp"
+            android:layout_marginTop="60dp" />
 
+    <TextView
+        android:text="District Number: "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textlabelTwo"
+        android:layout_alignBaseline="@+id/textlabelOne"
+        android:layout_alignBottom="@+id/textlabelOne"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/districtView"
+            android:layout_weight="0.5"
+            android:layout_marginRight="170dp"
+            android:layout_alignTop="@+id/infoView" />
 
 </RelativeLayout>
