--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -40,7 +40,7 @@
             android:clickable="true"/>
 
     <TextView
-        android:text="District Number: "
+        android:text="Representative status: "
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textlabelTwo"
